# RT64

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  dxc.sh  glslc.sh  todo.txt
src/: UpgradeLog.htm
src/rt64lib/private/: rt64_inspector.cpp  rt64_view.cpp  rt64_view.h
src/rt64lib/public/: rt64.h
src/rt64lib/shaders/: Color.hlsli  ComposePS.hlsl  DirectRayGen.hlsl  GlobalParams.hlsli  IndirectRayGen.hlsl  Lights.hlsli  PostProcessPS.hlsl  PrimaryRayGen.hlsl  ReflectionRayGen.hlsl  RefractionRayGen.hlsl  VolumetricFogRayGen.hlsl
src/rt64vk/: CMakeLists.txt  resource.h
src/rt64vk/contrib/: nvpro_core.diff
src/rt64vk/contrib/dxc/include/linux/: WinAdapter.h  dxcisense.h
src/rt64vk/contrib/fsr/include/: ffx_types.h
src/rt64vk/contrib/fsr/lib/: ffx_fsr2_api_vk_x64.lib  ffx_fsr2_api_x64.lib
src/rt64vk/contrib/nvpro_core/nvh/: bitarray.hpp  shaderfilemanager.hpp
src/rt64vk/contrib/nvpro_core/nvp/: perproject_globals.cpp  perproject_globals.hpp
src/rt64vk/contrib/nvpro_core/nvvk/: context_vk.cpp  raytraceKHR_vk.cpp  raytraceKHR_vk.hpp  resourceallocator_vk.hpp
src/rt64vk/private/: rt64_common.cpp  rt64_common.h  rt64_device.cpp  rt64_device.h  rt64_dlss.cpp  rt64_dlss.h  rt64_fsr.cpp  rt64_fsr.h  rt64_inspector.cpp  rt64_inspector.h  rt64_instance.cpp  rt64_instance.h  rt64_mesh.cpp  rt64_mesh.h  rt64_mipmaps.cpp  rt64_mipmaps.h  rt64_scene.cpp  rt64_scene.h  rt64_shader.cpp  rt64_shader.h  rt64_shader_hlsli.h  rt64_texture.cpp  rt64_texture.h  rt64_upscaler.cpp  rt64_upscaler.h  rt64_view.cpp  rt64_view.h  rt64_vma.cpp
src/rt64vk/public/: rt64.h
src/rt64vk/shaders/: BgSky.hlsli  CMakeLists.txt  Color.hlsli  ComposePS.hlsl  DebugPS.hlsl  Fog.hlsli  FullScreenVS.hlsl  GlobalBuffers.hlsli  GlobalHitBuffers.hlsli  GlobalParams.hlsli  HelloTrianglePS.hlsl  HelloTriangleVS.hlsl  IndirectRayGen.hlsl  InstancesRaster.hlsli  Lights.hlsli  Materials.hlsli  PostProcessPS.hlsl  PrimaryRayGen.hlsl  ReflectionRayGen.hlsl  RefractionRayGen.hlsl  TestPS.hlsl  TestRayGen.hlsl  TestVS.hlsl  TonemappingPS.hlsl  shader.frag  shader.frag.h  shader.vert  shader.vert.h
src/sample/: CMakeLists.txt  main.cpp
src/sample/res/Sponza/glTF/: sponza.mtl
